fixes header alignment

--- a/src/styles/Brand.less
+++ b/src/styles/Brand.less
@@ -2,6 +2,6 @@
   width:70px;
   height: 45px;
   padding: 0 0 0 0;
-  margin-top: -25px;
+  margin-top: -20px;
   margin-left: 10px;
 }
