--- a/src/styles/Header.less
+++ b/src/styles/Header.less
@@ -7,7 +7,7 @@
 }
 
 .top-buttons {
-  margin-top: 15px;
+  margin-top: 10px;
   margin-left: -30px;
   margin-right: -30px;
 }
